fix: resolve issue with reasons list not showing reasons in correct order

--- a/src/index.css
+++ b/src/index.css
@@ -197,6 +197,7 @@ td {
 .swiper {
   width: 100%;
   height: 100%;
+  border-radius: 1rem;
 }
 
 .swiper .swiper-slide {
